# pico-freertos-blink-cdc-uart-copilot

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  VERIFICATION.md  bclk_counter.pio  i2s.pio  main.c
scripts/: verify_serial.sh
verification/logs/: tone_sweep_summary.csv
verification/plots/: sine_1200Hz.ppm  square_1200Hz.ppm
